--- a/milky-spring-boot-starter/pom.xml
+++ b/milky-spring-boot-starter/pom.xml
@@ -37,6 +37,16 @@
             <groupId>com.stellariver.milky</groupId>
             <artifactId>spring-partner</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jdbc</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-logging</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
     </dependencies>
 
 </project>
