--- a/spring-partner/pom.xml
+++ b/spring-partner/pom.xml
@@ -20,11 +20,17 @@
     <dependencies>
         <dependency>
             <groupId>com.stellariver.milky</groupId>
-            <artifactId>domain-support</artifactId>
+            <artifactId>common-tool</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-jdbc</artifactId>
+            <artifactId>spring-boot-starter</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-logging</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
 
