Static Wire support

--- a/spring-partner/pom.xml
+++ b/spring-partner/pom.xml
@@ -23,6 +23,10 @@
             <artifactId>common-tool</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
             <exclusions>
