OfEnum annotation need to put in common-base jar which should be offered to consumer. So the link between @OfEnum annotation and OfEnumValidator need to be registered by service loader(javax.validation.ConstraintValidator), which was implemented @Constraint(validateBy=OfEnumValidator.class) before this commit.

--- a/common-base/pom.xml
+++ b/common-base/pom.xml
@@ -23,6 +23,10 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-text</artifactId>
         </dependency>
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
