IdBuilder, UniqueIdGetter, refactor

--- a/demo/starter/src/main/resources/application.properties
+++ b/demo/starter/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-
 server.port=8762
 
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=org.h2.Driver
+spring.sql.init.schema-locations=classpath:sql/*.sql
 
 spring.datasource.druid.initial-size=5
 spring.datasource.druid.min-idle=10
