--- a/spring-partner/pom.xml
+++ b/spring-partner/pom.xml
@@ -36,6 +36,10 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
