add new UniqueIdBuilder, that's so excellent!

--- a/demo/starter/src/main/resources/application.properties
+++ b/demo/starter/src/main/resources/application.properties
@@ -1,8 +1,13 @@
-server.port=8762
+server.port=80
 
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=org.h2.Driver
-spring.sql.init.schema-locations=classpath:sql/*.sql
+spring.datasource.url=jdbc:h2:mem:test
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+spring.h2.console.settings.web-allow-others=true
+spring.sql.init.schema-locations=classpath:sql/schema.sql
+spring.sql.init.data-locations=classpath:sql/data.sql
 
 spring.datasource.druid.initial-size=5
 spring.datasource.druid.min-idle=10
@@ -27,4 +32,4 @@ spring.datasource.druid.filter.wall.config.delete-allow=false
 spring.datasource.druid.filter.slf4j.data-source-log-enabled=true
 spring.datasource.druid.filter.slf4j.statement-executable-sql-log-enable=true
 
-logging.level.com.stellariver.milky.demo.infrastructure.database.mapper=ERROR
+logging.level.com.stellariver.milky.demo.infrastructure.database.mapper=debug
