--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,21 @@
         <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
         <jacoco.version>0.8.3</jacoco.version>
         <aspectj.version>1.9.7</aspectj.version>
+        <disruptor.version>3.4.4</disruptor.version>
+        <!--why downgrade to 0.9.11 https://github.com/ronmamo/reflections/issues/279-->
+        <refelctions.version>0.9.11</refelctions.version>
+        <reflectasm.version>1.11.9</reflectasm.version>
+        <apache.lang3.version>3.12.0</apache.lang3.version>
+        <commons.codec.version>1.15</commons.codec.version>
+        <commons.io.version>2.11.0</commons.io.version>
+        <apache.collections4.version>4.4</apache.collections4.version>
+        <apache.text.version>1.10.0</apache.text.version>
+        <guava.version>30.1.1-jre</guava.version>
+        <cglib.nodep.version>3.3.0</cglib.nodep.version>
+        <resilience4j.circuitbreaker.version>1.3.1</resilience4j.circuitbreaker.version>
+        <objenesis.version>3.3</objenesis.version>
+        <sql.formatter.version>2.0.3</sql.formatter.version>
+        <plexus.utils.version>3.4.2</plexus.utils.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -63,22 +78,6 @@
             </dependency>
 
             <!--aspectj-->
-            <dependency>
-                <groupId>org.aspectj</groupId>
-                <artifactId>aspectjrt</artifactId>
-                <version>${aspectj.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.aspectj</groupId>
-                <artifactId>aspectjtools</artifactId>
-                <version>${aspectj.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.aspectj</groupId>
-                <artifactId>aspectjweaver</artifactId>
-                <version>${aspectj.version}</version>
-            </dependency>
-
             <!-- milky modules -->
             <dependency>
                 <groupId>com.stellariver.milky</groupId>
@@ -120,77 +119,92 @@
                 <artifactId>milky-spring-boot-starter</artifactId>
                 <version>${revision}</version>
             </dependency>
+
             <!--utils start need to be update dependencies-->
+            <dependency>
+                <groupId>org.aspectj</groupId>
+                <artifactId>aspectjrt</artifactId>
+                <version>${aspectj.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.aspectj</groupId>
+                <artifactId>aspectjtools</artifactId>
+                <version>${aspectj.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.aspectj</groupId>
+                <artifactId>aspectjweaver</artifactId>
+                <version>${aspectj.version}</version>
+            </dependency>
             <dependency>
                 <groupId>com.lmax</groupId>
                 <artifactId>disruptor</artifactId>
-                <version>3.4.4</version>
+                <version>${disruptor.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.reflections</groupId>
                 <artifactId>reflections</artifactId>
-                <!--https://github.com/ronmamo/reflections/issues/279 why downgrade to 0.9.11-->
-                <version>0.9.11</version>
+                <version>${refelctions.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.esotericsoftware</groupId>
                 <artifactId>reflectasm</artifactId>
-                <version>1.11.9</version>
+                <version>${reflectasm.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-lang3</artifactId>
-                <version>3.12.0</version>
+                <version>${apache.lang3.version}</version>
             </dependency>
             <dependency>
                 <groupId>commons-codec</groupId>
                 <artifactId>commons-codec</artifactId>
-                <version>1.15</version>
+                <version>${commons.codec.version}</version>
             </dependency>
             <dependency>
                 <groupId>commons-io</groupId>
                 <artifactId>commons-io</artifactId>
-                <version>2.11.0</version>
+                <version>${commons.io.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-collections4</artifactId>
-                <version>4.4</version>
+                <version>${apache.collections4.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-text</artifactId>
-                <version>1.10.0</version>
+                <version>${apache.text.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
-                <version>30.1.1-jre</version>
+                <version>${guava.version}</version>
             </dependency>
             <dependency>
                 <groupId>cglib</groupId>
                 <artifactId>cglib-nodep</artifactId>
-                <version>3.3.0</version>
+                <version>${cglib.nodep.version}</version>
             </dependency>
             <dependency>
                 <groupId>io.github.resilience4j</groupId>
                 <artifactId>resilience4j-circuitbreaker</artifactId>
-                <version>1.3.1</version>
+                <version>${resilience4j.circuitbreaker.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.objenesis</groupId>
                 <artifactId>objenesis</artifactId>
-                <version>3.3</version>
+                <version>${objenesis.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.github.vertical-blank</groupId>
                 <artifactId>sql-formatter</artifactId>
-                <version>2.0.3</version>
+                <version>${sql.formatter.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.codehaus.plexus</groupId>
                 <artifactId>plexus-utils</artifactId>
-                <version>3.4.2</version>
+                <version>${plexus.utils.version}</version>
             </dependency>
 
             <!--infrastructure-base start-->
