--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,7 @@
         <objenesis.version>3.3</objenesis.version>
         <sql.formatter.version>2.0.3</sql.formatter.version>
         <plexus.utils.version>3.4.2</plexus.utils.version>
+        <jsch.version>0.1.55</jsch.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -206,6 +207,11 @@
                 <artifactId>plexus-utils</artifactId>
                 <version>${plexus.utils.version}</version>
             </dependency>
+            <dependency>
+                <groupId>com.jcraft</groupId>
+                <artifactId>jsch</artifactId>
+                <version>${jsch.version}</version>
+            </dependency>
 
             <!--infrastructure-base start-->
             <dependency>
@@ -264,6 +270,7 @@
                     </exclusion>
                 </exclusions>
             </dependency>
+
             <!--infrastructure-base end-->
         </dependencies>
     </dependencyManagement>
