--- a/common-tool/pom.xml
+++ b/common-tool/pom.xml
@@ -96,6 +96,10 @@
             <artifactId>reflections</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.jcraft</groupId>
+            <artifactId>jsch</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
             <optional>true</optional>
