--- a/pom.xml
+++ b/pom.xml
@@ -363,9 +363,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.2</version>
                 <configuration>
-                    <!-- 这个argLine会报红，但不能删除jacoco生成报告用的占位符，见jacoco里的propertyName，默认是argLine -->
-                    <!--suppress UnresolvedMavenProperty -->
-                    <argLine>${argLine} -Dfile.encoding=UTF-8</argLine>
+                    <argLine>@{argLine} -Dfile.encoding=UTF-8</argLine>
                 </configuration>
             </plugin>
             <plugin>
