--- a/common-base/pom.xml
+++ b/common-base/pom.xml
@@ -32,6 +32,12 @@
             <artifactId>jackson-databind</artifactId>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.findbugs</groupId>
+            <artifactId>jsr305</artifactId>
+            <version>3.0.2</version>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
 </project>
