UniqueIdBuilder add auto insert ability

--- a/demo/starter/src/main/resources/application.properties
+++ b/demo/starter/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 spring.h2.console.settings.web-allow-others=true
 spring.sql.init.schema-locations=classpath:sql/schema.sql
-spring.sql.init.data-locations=classpath:sql/data.sql
+#spring.sql.init.data-locations=classpath:sql/data.sql
 
 spring.datasource.druid.initial-size=5
 spring.datasource.druid.min-idle=10
