--- a/common-tool/pom.xml
+++ b/common-tool/pom.xml
@@ -96,8 +96,8 @@
             <artifactId>reflections</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.jcraft</groupId>
-            <artifactId>jsch</artifactId>
+            <groupId>com.hierynomus</groupId>
+            <artifactId>sshj</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
