--- a/common-tool/pom.xml
+++ b/common-tool/pom.xml
@@ -100,6 +100,10 @@
             <artifactId>sshj</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.jooq</groupId>
+            <artifactId>joor-java-8</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
             <optional>true</optional>
