add druid support and delete Jedis

--- a/demo/starter/src/main/resources/application.properties
+++ b/demo/starter/src/main/resources/application.properties
@@ -1,24 +1,41 @@
 server.port=80
 
-spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:test
+spring.datasource.a.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.a.driver-class-name=org.h2.Driver
+spring.datasource.a.url=jdbc:h2:mem:test
+spring.datasource.a.initial-size=5
+spring.datasource.a.min-idle=10
+spring.datasource.a.max-active=50
+spring.datasource.a.max-wait=60000
+spring.datasource.a.time-between-eviction-runs-millis=6000
+spring.datasource.a.min-evictable-idle-time-millis=30000
+spring.datasource.a.test-while-idle=true
+spring.datasource.a.validation-query=select 'x'
+spring.datasource.a.test-on-borrow=false
+spring.datasource.a.test-on-return=false
+
+
+spring.datasource.b.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.b.driver-class-name=org.h2.Driver
+spring.datasource.b.url=jdbc:h2:mem:test
+spring.datasource.b.initial-size=5
+spring.datasource.b.min-idle=10
+spring.datasource.b.max-active=50
+spring.datasource.b.max-wait=60000
+spring.datasource.b.time-between-eviction-runs-millis=6000
+spring.datasource.b.min-evictable-idle-time-millis=30000
+spring.datasource.b.test-while-idle=false
+spring.datasource.b.validation-query=select 'x'
+spring.datasource.b.test-on-borrow=false
+spring.datasource.b.test-on-return=false
+
+
+
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 spring.h2.console.settings.web-allow-others=true
 spring.sql.init.schema-locations=classpath:sql/schema.sql
 #spring.sql.init.data-locations=classpath:sql/data.sql
-
-spring.datasource.druid.initial-size=5
-spring.datasource.druid.min-idle=10
-spring.datasource.druid.max-active=50
-spring.datasource.druid.max-wait=60000
-spring.datasource.druid.time-between-eviction-runs-millis=6000
-spring.datasource.druid.min-evictable-idle-time-millis=30000
-spring.datasource.druid.test-while-idle=true
-spring.datasource.druid.validation-query=select 'x'
-spring.datasource.druid.test-on-borrow=false
-spring.datasource.druid.test-on-return=false
 
 spring.datasource.druid.filter.stat.log-slow-sql=true
 spring.datasource.druid.filter.stat.merge-sql=true
@@ -29,7 +46,27 @@ spring.datasource.druid.filter.stat.enabled=true
 spring.datasource.druid.filter.wall.config.multi-statement-allow=true
 spring.datasource.druid.filter.wall.config.delete-allow=false
 
-spring.datasource.druid.filter.slf4j.data-source-log-enabled=true
-spring.datasource.druid.filter.slf4j.statement-executable-sql-log-enable=true
+spring.datasource.druid.filter.slf4j.enabled=true
 
-logging.level.com.stellariver.milky.demo.infrastructure.database.mapper=debug
+logging.level.druid.sql.Statement=debug
+spring.datasource.druid.filter.slf4j.statement-log-enabled=true
+spring.datasource.druid.filter.slf4j.statement-log-error-enabled=true
+spring.datasource.druid.filter.slf4j.statement-executable-sql-log-enable=true
+spring.datasource.druid.filter.slf4j.statement-sql-pretty-format=true
+spring.datasource.druid.filter.slf4j.statement-close-after-log-enabled=false
+spring.datasource.druid.filter.slf4j.statement-parameter-clear-log-enable=false
+spring.datasource.druid.filter.slf4j.statement-parameter-set-log-enabled=false
+spring.datasource.druid.filter.slf4j.statement-execute-after-log-enabled=false
+spring.datasource.druid.filter.slf4j.statement-create-after-log-enabled=false
+spring.datasource.druid.filter.slf4j.statement-execute-batch-after-log-enabled=false
+spring.datasource.druid.filter.slf4j.statement-execute-query-after-log-enabled=false
+spring.datasource.druid.filter.slf4j.statement-execute-update-after-log-enabled=false
+spring.datasource.druid.filter.slf4j.statement-prepare-after-log-enabled=false
+spring.datasource.druid.filter.slf4j.statement-prepare-call-after-log-enabled=false
+
+logging.level.druid.sql.ResultSet=debug
+spring.datasource.druid.filter.slf4j.result-set-log-enabled=true
+spring.datasource.druid.filter.slf4j.result-set-log-error-enabled=true
+spring.datasource.druid.filter.slf4j.result-set-next-after-log-enabled=true
+spring.datasource.druid.filter.slf4j.result-set-open-after-log-enabled=false
+spring.datasource.druid.filter.slf4j.result-set-close-after-log-enabled=false
