--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -82,4 +82,19 @@
         </dependencies>
     </dependencyManagement>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>2.4</version>
+                <configuration>
+                    <archive>
+                        <addMavenDescriptor>true</addMavenDescriptor>
+                    </archive>
+                    <outputDirectory>${project.build.directory}/bin</outputDirectory>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
