--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -92,7 +92,7 @@
                     <archive>
                         <addMavenDescriptor>true</addMavenDescriptor>
                     </archive>
-                    <outputDirectory>${project.build.directory}/bin</outputDirectory>
+                    <outputDirectory>${project.build.directory}/../../target</outputDirectory>
                 </configuration>
             </plugin>
         </plugins>
