--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
     </modules>
 
     <properties>
-        <revision>0.2.1-SNAPSHOT</revision>
+        <revision>0.2.2</revision>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
         <spring.boot.version>2.7.7</spring.boot.version>
