--- a/demo/basic/pom.xml
+++ b/demo/basic/pom.xml
@@ -88,7 +88,7 @@
         </dependency>
         <dependency>
             <groupId>com.alibaba</groupId>
-            <artifactId>druid-spring-boot-starter</artifactId>
+            <artifactId>druid</artifactId>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
