--- a/pom.xml
+++ b/pom.xml
@@ -296,7 +296,7 @@
             </dependency>
             <dependency>
                 <groupId>com.alibaba</groupId>
-                <artifactId>druid-spring-boot-starter</artifactId>
+                <artifactId>druid</artifactId>
                 <version>1.1.5</version>
             </dependency>
             <!--infrastructure-base end-->
