--- a/demo/starter/src/main/resources/application.properties
+++ b/demo/starter/src/main/resources/application.properties
@@ -32,3 +32,5 @@ spring.h2.console.settings.web-allow-others=true
 spring.sql.init.schema-locations=classpath:sql/schema.sql
 #spring.sql.init.data-locations=classpath:sql/data.sql
 
+
+frodo.port=24113
