--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>infrastructure-base</module>
         <module>financial-base</module>
         <module>demo</module>
+        <module>frodo</module>
 
     </modules>
 
@@ -157,6 +158,17 @@
             <dependency>
                 <groupId>com.stellariver.milky</groupId>
                 <artifactId>milky-spring-boot-starter</artifactId>
+                <version>${revision}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.stellariver.milky.frodo</groupId>
+                <artifactId>core</artifactId>
+                <version>${revision}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.stellariver.milky.frodo</groupId>
+                <artifactId>frodo-spring-boot-starter</artifactId>
                 <version>${revision}</version>
             </dependency>
 
